@@ -165,6 +165,7 @@
 # define ACE_LACKS_GETHOSTBYNAME
 # define ACE_LACKS_GETIPNODEBYADDR
 # define ACE_LACKS_LISTEN
+# define ACE_LACKS_BIND
 # define ACE_LACKS_NTOHL
 # define ACE_LACKS_HTONL
 
