@@ -1,3 +1,12 @@
+Fri Oct 20 12:40:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+	* ace/OS_NS_sys_socket.inl (bind):
+	* ace/config-rtems.h:
+	  Added ACE_LACKS_BIND
+
+	* ace/Basic_Types.h:
+	  Fixed compile problems with BCB6
+
 Fri Oct 20 12:05:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
 	* ace/Log_Record.inl:
